--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
         - POSTGRES_DB=db
         - POSTGRES_USER=postgres
         - POSTGRES_PASSWORD=postgres
+        - PGDATA=/tmp
         - TZ=GMT
         volumes:
         - "./data/postgres:/var/lib/postgresql/data"
